--- a/http_requests.yaml
+++ b/http_requests.yaml
@@ -16,7 +16,7 @@ tags:
   - name: Users
     description: Manage users who curate papers and run analysis.
   - name: Chat
-    description: Perform RAG-based Q&A on papers and code.
+    description: Perform RAG-based Q&A on papers and code (specialized operations included).
   - name: Code
     description: Manage codebases linked to papers.
   - name: History
@@ -500,10 +500,14 @@ paths:
         '200':
           description: User's paper list updated.
 
+  # ---------------------------
+  # Chat (specialized operations)
+  # ---------------------------
+
   /chat/qa:
     post:
       tags: [Chat]
-      summary: Chat over papers and code
+      summary: Chat over papers and code (general Q&A)
       description: Performs RAG Q&A, optionally scoped to a specific user's selected papers.
       requestBody:
         required: true
@@ -519,10 +523,18 @@ paths:
                 userId:
                   type: string
                   description: "Optional: Scope the chat to a specific user's papers."
+                paperIds:
+                  type: array
+                  description: "Optionally restrict retrieval to these paper IDs."
+                  items: { type: string }
                 searchCode:
                   type: boolean
                   description: "If true, also search linked codebases."
                   default: false
+                maxContexts:
+                  type: integer
+                  default: 8
+                  description: "Max retrieved chunks used for grounding."
       responses:
         '200':
           description: Answer with citations.
@@ -530,6 +542,249 @@ paths:
             application/json:
               schema: { $ref: '#/components/schemas/QAResponse' }
 
+  /chat/summarize:
+    post:
+      tags: [Chat]
+      summary: Summarize one or many papers
+      description: Produce hierarchical or bullet summaries at configurable granularity.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [paperIds]
+              properties:
+                paperIds:
+                  type: array
+                  items: { type: string }
+                  example: [paper123, paper456]
+                focus:
+                  type: string
+                  enum: [abstract, intro, methods, results, conclusion, full]
+                  default: full
+                style:
+                  type: string
+                  enum: [bullets, narrative, tl;dr]
+                  default: bullets
+                length:
+                  type: string
+                  enum: [short, medium, long]
+                  default: medium
+                includeCitations:
+                  type: boolean
+                  default: true
+      responses:
+        '200':
+          description: Summaries with optional citations
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  items:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        paperId: { type: string }
+                        summary: { type: string }
+                        citations:
+                          type: array
+                          items: { $ref: '#/components/schemas/PaperCitation' }
+
+  /chat/outline:
+    post:
+      tags: [Chat]
+      summary: Generate structured outlines
+      description: Returns a section/subsection outline for study notes, slides, or lectures based on given papers.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                paperIds:
+                  type: array
+                  items: { type: string }
+                depth:
+                  type: integer
+                  default: 2
+                  description: "Heading depth (1-3)."
+                audience:
+                  type: string
+                  example: "graduate ML course"
+      responses:
+        '200':
+          description: Outline
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  outline:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        heading: { type: string }
+                        level: { type: integer }
+                        children:
+                          type: array
+                          items:
+                            type: object
+                            properties:
+                              heading: { type: string }
+                              level: { type: integer }
+
+  /chat/extract:
+    post:
+      tags: [Chat]
+      summary: Schema-guided information extraction
+      description: Extract structured facts (datasets, metrics, hyperparams, claims) using a JSON schema.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [paperIds, schema]
+              properties:
+                paperIds:
+                  type: array
+                  items: { type: string }
+                schema:
+                  type: object
+                  description: "JSON Schema for expected output."
+                  example:
+                    type: object
+                    properties:
+                      datasets: { type: array, items: { type: string } }
+                      metrics: { type: array, items: { type: string } }
+                      bestResult:
+                        type: object
+                        properties:
+                          dataset: { type: string }
+                          value: { type: number }
+                includeCode:
+                  type: boolean
+                  default: false
+      responses:
+        '200':
+          description: Extracted structured data with citations
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: object
+                  citations:
+                    type: array
+                    items: { $ref: '#/components/schemas/PaperCitation' }
+
+  /chat/citations:
+    post:
+      tags: [Chat]
+      summary: Generate formatted citations
+      description: Return a bibliography for given papers in a target format (e.g., BibTeX, APA).
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [paperIds, format]
+              properties:
+                paperIds:
+                  type: array
+                  items: { type: string }
+                format:
+                  type: string
+                  enum: [bibtex, apa, mla, chicago]
+                  example: bibtex
+      responses:
+        '200':
+          description: Formatted citations
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  entries:
+                    type: array
+                    items:
+                      type: string
+                      example: |
+                        @inproceedings{smith2021awesome,
+                          title={Awesome Paper}, author={Smith, J. and Doe, A.}, year={2021}, booktitle={NeurIPS}
+                        }
+
+  /chat/code-qa:
+    post:
+      tags: [Chat]
+      summary: Code-aware Q&A
+      description: Answer questions requiring both paper context and linked repository reasoning (cross-references included).
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [question]
+              properties:
+                question:
+                  type: string
+                  example: "How is label smoothing implemented compared to the method section?"
+                paperId:
+                  type: string
+                repoPaths:
+                  type: array
+                  items: { type: string }
+                  description: "Optional file path filters within the linked repo."
+                maxSnippets:
+                  type: integer
+                  default: 6
+      responses:
+        '200':
+          description: Answer with paper and code citations
+          content:
+            application/json:
+              schema: { $ref: '#/components/schemas/QAResponse' }
+  /chat/compare:
+    post:
+      tags: [Chat]
+      summary: General cross-paper comparison (narrative)
+      description: Compares papers across all major dimensions (methods, datasets, metrics/results, code/implementation, compute, limitations, novelty, etc.) and returns a narrative synthesis with citations.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required: [paperIds]
+              properties:
+                paperIds:
+                  type: array
+                  items: { type: string }
+                  example: [paper123, paper456, paper789]
+                includeCode:
+                  type: boolean
+                  description: "Also contrast linked codebases where available."
+                  default: true
+                includeCitations:
+                  type: boolean
+                  description: "Include supporting citations for claims."
+                  default: true
+      responses:
+        '200':
+          description: Narrative comparison with citations
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/QAResponse'
+  
   /chat/sessions:
     post:
       tags: [History]
@@ -671,108 +926,6 @@ paths:
           content:
             application/json:
               schema: { $ref: '#/components/schemas/ChatMessage' }
-
-  /papers/compare:
-    post:
-      tags: [Papers]
-      summary: Compare multiple papers on specific dimensions
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                paperIds:
-                  type: array
-                  items: { type: string }
-                  example: [paper123, paper456]
-                dimensions:
-                  type: array
-                  items:
-                    type: string
-                    enum: [algorithms, datasets, metrics, results]
-                  example: [algorithms, datasets]
-      responses:
-        '200':
-          description: Structured comparison result
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ComparisonResult'
-
-  /papers/compare/{comparisonId}/summary:
-    get:
-      tags: [Papers]
-      summary: Get a summary of a comparison
-      parameters:
-        - in: path
-          name: comparisonId
-          required: true
-          schema: { type: string }
-      responses:
-        '200':
-          description: Comparison summary
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/QAResponse'
-
-  /papers/align:
-    get:
-      tags: [Papers]
-      summary: Align sections across multiple papers
-      parameters:
-        - in: query
-          name: paperIds
-          required: true
-          schema:
-            type: array
-            items: { type: string }
-          style: form
-          explode: false
-          example: [paper123, paper456]
-        - in: query
-          name: sections
-          required: true
-          schema:
-            type: array
-            items: { type: string }
-          example: [methods, results]
-      responses:
-        '200':
-          description: Side-by-side aligned sections
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/PaperCitation'
-
-  /papers/questions:
-    post:
-      tags: [Papers]
-      summary: Ask questions across multiple papers
-      requestBody:
-        required: true
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                question: { type: string, example: "Which paper achieved the best accuracy on CIFAR-10?" }
-                paperIds:
-                  type: array
-                  items: { type: string }
-                  example: [paper123, paper456]
-                includeCode: { type: boolean, example: true }
-      responses:
-        '200':
-          description: Answer with supporting citations
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/QAResponse'
 
 components:
   schemas:
